log/build_2025-10-14_20-34-09/bubble_protocol/stderr.log
  File "/home/nhs/engineer/install/bubble_protocol/lib/python3.10/site-packages/bubble_protocol/hardware.py", line 197
    print(current_packet[ID_POSE]"!"ID[key][IDX_BCPID])
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

